_sass/layout/_masthead.scss
// Styling for the masthead
header.masthead {
  width: 100%;
  max-height: 500px;
  margin-bottom: 30px;
  text-align: center;

  background-image: url("#{$header-image}");
  background-repeat: no-repeat;
  background-attachment: fixed;
  background-position: center center;
  background-size: cover;

  .intro-text {
    padding-top: 150px;
    padding-bottom: 100px;
    .intro-lead-in {
      font-size: 32px;
      font-weight: 700;
      margin-bottom: 25px;
      color: $primary;
      text-shadow: 0 0 6px $white, 0 0 6px $white, 0 0 6px $white, 0 0 6px $white; 
      @include script-font;
    }
    .intro-heading {
      font-size: 20px;
      font-style: italic;
      margin-bottom: 25px;
      color: $white;
      // text-shadow: 0 0 4px $primary, 0 0 4px $primary, 0 0 4px $primary, 0 0 4px $primary; 
      @include serif-font;
    }
  }
}

@media (min-width: 512px) {
  header.masthead {
    .intro-text {
      .intro-lead-in {
        font-size: 48px;
        margin-bottom: 25px;
      }
      .intro-heading {
        font-size: 28px;
        margin-bottom: 50px;
      }
    }
  }
}

@media (min-width: 768px) {
  header.masthead {
    max-height: 700px;
    .intro-text {
      padding-top: 200px;
      padding-bottom: 200px;
      .intro-lead-in {
        font-size: 68px;
        margin-bottom: 25px;
      }
      .intro-heading {
        font-size: 40px;
        margin-bottom: 50px;
      }
    }
  }
}

